# airflow-alerts

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.docker/: .env_example  Dockerfile  docker-compose.yaml
airflow-alerts/: README.md  pyproject.toml
airflow-alerts/src/airflow_alerts/: google_chat.py  utils.py
src/airflow_alerts/: google_chat.py  utils.py
tests/: test_google_chat.py
